got the documentup page working

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="documentup.min.js"></script>
-    <script>
-      DocumentUp.document({
-        repo: "derickbailey/backbone.marionette",
-        name: "backbone.marionette",
-        twitter: [
-          "derickbailey",
-          "backbonejsclass",
-          "mutedsolutions"
-        ]
+    <script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script language="javascript" src="documentup.js"></script>
+    <script language="javascript">
+      $(function(){
+        DocumentUp.document({
+          repo: "derickbailey/backbone.marionette",
+          name: "backbone.marionette",
+          twitter: [
+            "derickbailey",
+            "backbonejsclass",
+            "mutedsolutions"
+          ]
+        });
       });
     </script>
   </head>
