--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -113,6 +113,7 @@
     <script src="test/unit/item-view.spec.js"></script>
     <script src="test/unit/layout-view.dynamic-regions.spec.js"></script>
     <script src="test/unit/layout-view.spec.js"></script>
+    <script src="test/unit/on-attach.spec.js"></script>
     <script src="test/unit/mixin-underscore-collection.spec.js"></script>
     <script src="test/unit/module.spec.js"></script>
     <script src="test/unit/module.stop.spec.js"></script>
