--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -103,7 +103,7 @@
     <script src="test/unit/collection-view.reset.spec.js"></script>
     <script src="test/unit/collection-view.spec.js"></script>
     <script src="test/unit/commands.spec.js"></script>
-    <script src="test/unit/composite-view-child-view-container.spec.js"></script>
+    <script src="test/unit/composite-view.child-view-container.spec.js"></script>
     <script src="test/unit/composite-view.on-before-render.spec.js"></script>
     <script src="test/unit/composite-view.spec.js"></script>
     <script src="test/unit/controller.spec.js"></script>
@@ -126,7 +126,7 @@
     <script src="test/unit/request-response.spec.js"></script>
     <script src="test/unit/sorted-views.spec.js"></script>
     <script src="test/unit/template-cache.spec.js"></script>
-    <script src="test/unit/template-celpers.spec.js"></script>
+    <script src="test/unit/template-helpers.spec.js"></script>
     <script src="test/unit/trigger-method.spec.js"></script>
     <script src="test/unit/unbind-entity-events.spec.js"></script>
     <script src="test/unit/view.entity-events.spec.js"></script>
